# rss-sidecar

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glossary.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN-v1.md  DESIGN.md
docs/tech-validation/: REPORT.md  trafilatura_results.json  translation_test.json
experiments/graphify-validation/: REPORT.md  extraction.json
src/rss_sidecar/: config.py  embedding.py  extractor.py  fetcher.py  freshrss_client.py  graph_builder.py  main.py  mcp_server.py  memory.py  miniflux_client.py  models.py  rss_output.py  translator.py
src/rss_sidecar/templates/: article.html  dashboard.html
tests/: conftest.py  test_core.py  test_extractor.py  test_fetcher.py  test_graph.py  test_memory.py  test_rss_output.py  test_state_machine.py  test_translator.py
