[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rss-sidecar"
version = "0.1.0"
description = "AI translation + knowledge graph sidecar for FreshRSS/Miniflux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "lxml_html_clean>=0.1",
    "httpx>=0.27",
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "feedgen>=1.0",
    "structlog>=24.4",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rss_sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
